# Task-managing

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
app/api/: main.py
app/api/builds/: contracts.py  endpoints.py
app/api/common/: contracts.py  dependencies.py  endpoints.py  error_handlers.py  event_handlers.py  middleware.py  settings.py
app/common/: container.py  errors.py
app/infrastructure/: repository.py  settings.py
app/service/: models.py  service.py
tests/integration/: test_post_build_get_tasks.py
