[tool.poetry]
name = "saber-test"
version = "0.1.0"
description = ""
authors = ["L1mple <L1mple@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
case-converter = "^1.1.0"
toolz = "^0.12.0"
dependency-injector = "^4.41.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "<5.0.0"
pytest = "^7.1.3"
isort = "^5.10.1"
pytest-asyncio = "^0.18.1"
flake8-bugbear = "^22.3.23"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
flake8-string-format = "^0.3.0"
flake8-bandit = "^3.0.0"
flake8-builtins = "^1.5.3"
flake8-black = "^0.3.2"
flake8-requirements = "^1.5.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
